feat: index page header, footer and other sections

--- a/grid-blog.html
+++ b/grid-blog.html
@@ -110,7 +110,7 @@
                                                 </li>
                                             </ul>
                                         </li>
-                                        <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
+                                        <li class="rd-nav-item"><a class="rd-nav-link" href="contact-us.html">Contacts</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -241,7 +241,7 @@
                                     <ul class="list list-xs">
                                         <li><a href="projects.html">Projects</a></li>
                                         <li><a href="single-project.html">Single Project</a></li>
-                                        <li><a href="contacts.html">Contacts</a></li>
+                                        <li><a href="contact-us.html">Contacts</a></li>
                                         <li><a href="testimonials.html">Testimonials</a></li>
                                         <li><a href="privacy-policy.html">Terms of Use</a></li>
                                     </ul>
