--- a/contacts.html
+++ b/contacts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
 
-<!-- /contacts.html  39  -->
+<!-- /contact-us.html  39  -->
 
 <head>
     <title>Contacts</title>
@@ -110,7 +110,7 @@
                                                 </li>
                                             </ul>
                                         </li>
-                                        <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contacts</a>
+                                        <li class="rd-nav-item active"><a class="rd-nav-link" href="contact-us.html">Contacts</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -249,7 +249,7 @@
                                     <ul class="list list-xs">
                                         <li><a href="projects.html">Projects</a></li>
                                         <li><a href="single-project.html">Single Project</a></li>
-                                        <li><a href="contacts.html">Contacts</a></li>
+                                        <li><a href="contact-us.html">Contacts</a></li>
                                         <li><a href="testimonials.html">Testimonials</a></li>
                                         <li><a href="privacy-policy.html">Terms of Use</a></li>
                                     </ul>
@@ -341,6 +341,6 @@
     <!-- End Google Tag Manager -->
 </body>
 
-<!-- /contacts.html  39  -->
+<!-- /contact-us.html  39  -->
 
 </html>
