index page updated

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                                     allowfullscreen=""></iframe>
                             </div>
                             <div class="thumbnail-video__overlay video-overlay"
-                                style="background-image: url(images/video-preview-1-570x320.jpg)">
+                                style="background-image: url(images/invitation_video_cover.jpg)">
                                 <div class="button-video"></div>
                                 <h5>A Glimpse of CCET (Training and Placement Cell)</h5>
                             </div>
@@ -525,103 +525,47 @@
         <!-- Testimonials-->
         <section class="section section-lg bg-gray-100">
             <div class="container">
-                <h3 class="text-center">Facilities for Recruiters</h3>
                 <div class="row row-50 justify-content-center justify-content-lg-between">
-                    <div class="col-md-10 col-lg-5">
-                        <div class="owl-carousel" data-items="1" data-dots="true" data-nav="false" data-loop="false"
-                            data-margin="30" data-stage-padding="0" data-mouse-drag="false">
-                            <div class="wow-outer">
-                                <blockquote class="quote-modern wow slideInLeft">
-                                    <svg class="quote-modern-mark" x="0px" y="0px" width="35px" height="25px"
-                                        viewbox="0 0 35 25">
-                                        <path
-                                            d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
-                                        </path>
-                                    </svg>
-                                    <div class="quote-modern-text">
-                                        <p>Freedom is one of those political parties who really care about their
-                                            supporters. They know how to help the citizens while also improving the
-                                            economic situation by introducing rules and regulations for product and
-                                            services distribution in many regions of the USA.</p>
-                                    </div>
-                                    <div class="quote-modern-meta">
-                                        <div class="quote-modern-avatar"><img
-                                                src="images/testimonials-person-3-96x96.jpg" alt="" width="96"
-                                                height="96" />
-                                        </div>
-                                        <div class="quote-modern-info">
-                                            <cite class="quote-modern-cite">Albert Webb</cite>
-                                            <p class="quote-modern-caption">Freelancer</p>
-                                        </div>
-                                    </div>
-                                </blockquote>
-                            </div>
-                            <div class="wow-outer">
-                                <blockquote class="quote-modern wow slideInLeft">
-                                    <svg class="quote-modern-mark" x="0px" y="0px" width="35px" height="25px"
-                                        viewbox="0 0 35 25">
-                                        <path
-                                            d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
-                                        </path>
-                                    </svg>
-                                    <div class="quote-modern-text">
-                                        <p>Your party is one of the few that help small businesses. Though you have a
-                                            great program for every sector of economy, your thoughts on developing small
-                                            companies may greatly improve the role of entrepreneurs in
-                                            our state and many other cities and towns. </p>
-                                    </div>
-                                    <div class="quote-modern-meta">
-                                        <div class="quote-modern-avatar"><img
-                                                src="images/testimonials-person-1-96x96.jpg" alt="" width="96"
-                                                height="96" />
-                                        </div>
-                                        <div class="quote-modern-info">
-                                            <cite class="quote-modern-cite">Samantha Lee</cite>
-                                            <p class="quote-modern-caption">Entrepreneur</p>
-                                        </div>
-                                    </div>
-                                </blockquote>
-                            </div>
-                            <div class="wow-outer">
-                                <blockquote class="quote-modern wow slideInLeft">
-                                    <svg class="quote-modern-mark" x="0px" y="0px" width="35px" height="25px"
-                                        viewbox="0 0 35 25">
-                                        <path
-                                            d="M27.461,10.206h7.5v15h-15v-15L25,0.127h7.5L27.461,10.206z M7.539,10.206h7.5v15h-15v-15L4.961,0.127h7.5                L7.539,10.206z">
-                                        </path>
-                                    </svg>
-                                    <div class="quote-modern-text">
-                                        <p>The political program of Freedom party, among other options, is aimed at
-                                            taking care of our culture, which is very important for our state and for
-                                            the whole country. That is exactly why I appreciate what their team
-                                            does. Their Art Reform is very detailed and thought-out.</p>
-                                    </div>
-                                    <div class="quote-modern-meta">
-                                        <div class="quote-modern-avatar"><img
-                                                src="images/testimonials-person-2-96x96.jpg" alt="" width="96"
-                                                height="96" />
-                                        </div>
-                                        <div class="quote-modern-info">
-                                            <cite class="quote-modern-cite">Bill Warner</cite>
-                                            <p class="quote-modern-caption">Artist</p>
-                                        </div>
-                                    </div>
-                                </blockquote>
-                            </div>
+                    <div class="col-md-10 col-lg-8 col-xl-8">
+                        <h3 class="wow-outer"><span class="wow slideInDown">Facilities for Recruiters</span></h3>
+
+                        <p class="wow-outer">
+                            <span class="wow slideInDown" data-wow-delay=".05s">
+                                <span class="bullet-point"></span>
+                                Well-Equipped GD rooms and spacious Lecture Halls.
+                            </span>
+                        </p>
+                        <p class="wow-outer">
+                            <span class="wow slideInDown" data-wow-delay=".1s">
+                                <span class="bullet-point"></span>
+                                Auditorium with capacity of 300 for presentation.
+                            </span>
+                        </p>
+                        <p class="wow-outer">
+                            <span class="wow slideInDown" data-wow-delay=".15s">
+                                <span class="bullet-point"></span>
+                                Facilities available for online test (upto 100 students).
+                            </span>
+                        </p>
+                        <p class="wow-outer">
+                            <span class="wow slideInDown" data-wow-delay=".2s">
+                                <span class="bullet-point"></span>
+                                Student volunteers for every possible arrangements.
+                            </span>
+                        </p>
+                        <p class="wow-outer">
+                            <span class="wow slideInDown" data-wow-delay=".25s">
+                                <span class="bullet-point"></span>
+                                Well-Equipped Labs for all written as well as online tests.
+                            </span>
+                        </p>
+                        <div class="wow-outer button-outer"><a
+                                class="button button-lg button-primary button-winona wow slideInDown"
+                                data-wow-delay=".3s" href="past-placements.html">Learn more</a>
                         </div>
                     </div>
-                    <div class="col-md-10 col-lg-6 wow-outer">
-                        <div class="thumbnail-video-1 bg-gray-700 wow slideInLeft">
-                            <div class="embed-responsive embed-responsive-16by9">
-                                <iframe width="570" height="320" src="http://www.youtube.com/embed/QZzbm-FrkGk"
-                                    allowfullscreen=""></iframe>
-                            </div>
-                            <div class="thumbnail-video__overlay video-overlay"
-                                style="background-image: url(images/video-preview-1-570x320.jpg)">
-                                <div class="button-video"></div>
-                                <h5>Lawrence Alvarado</h5>
-                            </div>
-                        </div>
+                    <div class="col-md-10 col-lg-4"><img class="img-responsive" src="images/facilities_recruiters.svg"
+                            alt="" width="200" height="200" />
                     </div>
                 </div>
             </div>
