--- a/contact-us.html
+++ b/contact-us.html
@@ -4,7 +4,7 @@
 <!-- /forms.html  35  -->
 
 <head>
-  <title>Contact US</title>
+  <title>Contact Us</title>
   <meta name="format-detection" content="telephone=no">
   <meta name="viewport"
     content="width=device-width height=device-height initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/style.css" id="main-styles-link">
-  <link rel="stylesheet" href="css/tpc-contact-us.css">
+  <link rel="stylesheet" href="css/my-style.css">
   <!--[if lt IE 10]>
     <div style="background: #212121; padding: 10px 0; box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3); clear: both; text-align:center; position: relative; z-index:1;"><a href="https://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
     <script src="js/html5shiv.min.js"></script>
@@ -198,6 +198,20 @@
         </nav>
       </div>
     </header>
+    <section class="mb-5" style="background-color: #343a4010;">
+      <div class="breadcrumbs-custom-inner">
+          <div class="container breadcrumbs-custom-container">
+              <div class="breadcrumbs-custom-main">
+                  <h6 class="breadcrumbs-custom-subtitle title-decorated">FOR ANY TRAINING AND PLACEMENT RELATED QUERY</h6>
+                  <h1 class="breadcrumbs-custom-title">Contact Us</h1>
+              </div>
+              <ul class="breadcrumbs-custom-path">
+                  <li><a href="index.html">Home</a></li>
+                  <li class="active">Contact Us</li>
+              </ul>
+          </div>
+      </div>
+  </section>
     <!-- <div class="parallax-container" data-parallax-img="images/banner2.jpg">
               <div class="parallax-content">
                   <div class="jumbotron-classic-inner">
