company logo's centered

--- a/past-placements.html
+++ b/past-placements.html
@@ -275,121 +275,121 @@
             <div class="heading-underline"></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r28.png" alt="Amazon">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r29.png" alt="IndiaMart">
                     </div>
-                    <div class="col-md-2 col-sm-2">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r9.png" alt="Mahindra">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r34.jpg" alt="Godrej">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r25.jpg" alt="TCS">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r30.jpg" alt="MPL">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r8.png" alt="Jugnoo">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r7.png" alt="Jaro Education">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r6.png" alt="innov8">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r38.png" alt="GeminiSolutions">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r18.png" alt="Zycus">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r5.png" alt="Infosys">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r11.png" alt="Quark">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r17.png" alt="uTrade">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r21.jpg" alt="o9">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r16.png" alt="TTConsultant">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r33.png" alt="JungleWorks">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r15.png" alt="TridentGroup">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r14.png" alt="TheHimalayanROI">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r13.png" alt="SMLisuzu">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r19.png" alt="IFB">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r12.png" alt="TheSmartCube">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r10.png" alt="One">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r1.png" alt="Cubicle">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r20.png" alt="CDI">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r22.jpg" alt="HenceForth">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r23.png" alt="CodeBrew">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r24.jpg" alt="Zversal">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r26.png" alt="SourceFuse">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r27.png" alt="MintWealth">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r35.png" alt="VishudhAjivam">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r36.jpg" alt="Resec">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r37.jpg" alt="CTSolution">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r39.png" alt="EliteSafety">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r40.jpg" alt="BlueBash">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r41.png" alt="MWIDM">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r42.png" alt="Melior">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r43.jpg" alt="Icuerious">
                     </div>
-                    <div class="col-md-2 col-sm-4">
+                    <div class="col-md-2 col-sm-4 d-flex justify-content-center">
                         <img class="inner-img" src="images/logo/r44.png" alt="SP_Singla">
                     </div>
 
