--- a/our-alumni.html
+++ b/our-alumni.html
@@ -72,11 +72,11 @@
                                                 of
                                                 Conduct</a>
                                         </li>
-                                        <li class="rd-nav-item"><a class="rd-nav-link"
-                                                href="past-placements.html">Past
+                                        <li class="rd-nav-item"><a class="rd-nav-link" href="past-placements.html">Past
                                                 Placements</a>
                                         </li>
-                                        <li class="rd-nav-item active "><a class="rd-nav-link" href="our-alumni.html">Our
+                                        <li class="rd-nav-item active "><a class="rd-nav-link"
+                                                href="our-alumni.html">Our
                                                 Alumni</a>
                                         </li>
                                         <!-- <li class="rd-nav-item"><a class="rd-nav-link" href="#">Blog</a>
@@ -221,7 +221,8 @@
             <div class="breadcrumbs-custom-inner">
                 <div class="container breadcrumbs-custom-container">
                     <div class="breadcrumbs-custom-main">
-                        <h6 class="breadcrumbs-custom-subtitle title-decorated">ALUMNI ASSOCIATION OF CHANDIGARH COLLEGE OF ENGINEERING AND TECHNOLOGY</h6>
+                        <h6 class="breadcrumbs-custom-subtitle title-decorated">ALUMNI ASSOCIATION OF CHANDIGARH COLLEGE
+                            OF ENGINEERING AND TECHNOLOGY</h6>
                         <h1 class="breadcrumbs-custom-title">AACCET</h1>
                     </div>
                     <ul class="breadcrumbs-custom-path">
@@ -774,9 +775,9 @@
                         </article>
                     </div>
                 </div>
-                <div class="wow-outer button-outer"><a
+                <!-- <div class="wow-outer button-outer"><a
                         class="button button-lg button-primary button-winona wow slideInUp" href="#">View all Team</a>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- Our Entrepreneurs-->
