updated pdf viewer

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -245,19 +245,28 @@
                 </div>
             </div>
         </div>
-        <div class="info-container mt-5">
+        <div class="info-container mt-2">
             <div class="col-md-10">
-                <iframe src="images/pdf/TPC code of conduct 2021.pdf" height="800px" width="100%"></iframe>
+                <div class="embed-responsive embed-responsive-4by3">
+                    <iframe src="images/pdf/TPC code of conduct 2021.pdf" height="100%"
+                        width="100%"></iframe>
+                </div>
             </div>
         </div>
         <div class="info-container mt-2">
             <div class="col-md-10">
-                <iframe src="images/pdf/Declaration.pdf" height="800px" width="100%"></iframe>
+                <div class="embed-responsive embed-responsive-4by3">
+                    <iframe src="images/pdf/Declaration.pdf" height="100%"
+                        width="100%"></iframe>
+                </div>
             </div>
         </div>
         <div class="info-container mt-2">
             <div class="col-md-10">
-                <iframe src="images/pdf/cvFormat.pdf" height="800px" width="100%"></iframe>
+                <div class="embed-responsive embed-responsive-4by3">
+                    <iframe src="images/pdf/cvFormat.pdf" height="100%"
+                        width="100%"></iframe>
+                </div>
             </div>
         </div>
         <footer class="section footer-linked bg-secondary-dark">
