--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
 <!-- /forms.html  35  -->
 
 <head>
-    <title>Code of Conduct</title>
+    <title>Events</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport"
         content="width=device-width height=device-height initial-scale=1.0 maximum-scale=1.0 user-scalable=0">
@@ -72,9 +72,9 @@
                                                           href="testimonials.html">Testimonials</a></li>
                                               </ul>
                                           </li> -->
-                                          <li class="rd-nav-item"><a class="rd-nav-link" href="events.html">Events</a>
-                                          </li>
-                                        <li class="rd-nav-item active"><a class="rd-nav-link"
+                                        <li class="rd-nav-item active"><a class="rd-nav-link" href="events.html">Events</a>
+                                        </li>
+                                        <li class="rd-nav-item"><a class="rd-nav-link"
                                                 href="code-of-conduct.html">Code
                                                 of
                                                 Conduct</a>
@@ -187,6 +187,7 @@
                                         <li class="rd-nav-item"><a class="rd-nav-link" href="contact-us.html">Contact
                                                 Us</a>
                                         </li>
+                                        
                                     </ul>
                                 </div>
                                 <!-- RD Navbar Search-->
@@ -209,68 +210,130 @@
         </header>
 
 
-        <section class="mb-5" style="background-color: #343a4010;">
+        <section class="mb-2" style="background-color: #343a4010;">
             <div class="breadcrumbs-custom-inner">
                 <div class="container breadcrumbs-custom-container">
                     <div class="breadcrumbs-custom-main">
                         <h6 class="breadcrumbs-custom-subtitle title-decorated">CHANDIGARH COLLEGE OF ENGINEERING AND
                             TECHNOLOGY
                         </h6>
-                        <h1 class="breadcrumbs-custom-title">Code of Conduct</h1>
+                        <h1 class="breadcrumbs-custom-title">Events</h1>
                     </div>
                     <ul class="breadcrumbs-custom-path">
                         <li><a href="index.html">Home</a></li>
-                        <li class="active">Code of Conduct</li>
+                        <li class="active">Events</li>
                     </ul>
                 </div>
             </div>
         </section>
-        <div class="container">
-            <div class="row row-50 justify-content-center">
-                <div class="col-md-10 col-lg-11">
-                    <p class="wow-outer">
-                        <span class="wow slideInDown" data-wow-delay=".05s">Training and Placements Cell code of conduct
-                            specifies important guidelines that are supposed to be adhere by the students of final year
-                            participating in placement drives conducted by TPC.
-                        </span>
-                    </p>
-                    <p class="wow-outer"><span class="wow slideInDown" data-wow-delay=".1s">All the students
-                            participating in placement
-                            drives are supposed to
-                            go through the code of conduct before applying for any campus placement.
-                        </span></p>
-                    <p class="wow-outer0"><span class="wow slideInDown" data-wow-delay=".15s"> Any kind of failure by
-                            any student in
-                            compliance of any guideline of code of conduct will lead to immediate implementation of
-                            action as mentioned in the code of conduct.</span>
-                    </p>
+
+        <section class="section section-lg oh">
+            <div class="container">
+                <!-- Isotope Filters-->
+                <div class="isotope-filters isotope-filters-modern">
+                    <button class="isotope-filters-toggle button button-sm button-primary" data-custom-toggle="#isotope-filters" data-custom-toggle-disable-on-blur="true">Filter<span class="caret"></span></button>
+                    <ul class="isotope-filters-list" id="isotope-filters">
+                        <li><a class="active" data-isotope-filter="*" data-isotope-group="portfolio" href="#">All Types</a></li>
+                        <li><a data-isotope-filter="Type 1" data-isotope-group="portfolio" href="#">Events</a></li>
+                        <li><a data-isotope-filter="Type 2" data-isotope-group="portfolio" href="#">Meetings</a></li>
+                        <li><a data-isotope-filter="Type 3" data-isotope-group="portfolio" href="#">Conferences</a></li>
+                    </ul>
+                </div>
+                <div class="isotope isotope-responsive row" data-isotope-layout="fitRows" data-isotope-group="portfolio" data-lightgallery="group">
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 3">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/gallery-original-1.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-1-370x256.jpg" alt="" width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Boston Meeting</p>
+                                <p class="thumbnail-classic-text">Boston, Events</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 2">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/gallery-original-2.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-2-370x256.jpg" alt="" width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Seattle Meeting</p>
+                                <p class="thumbnail-classic-text">Seattle, Events</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/gallery-original-3.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-3-370x256.jpg" alt="" width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">The Future of Politics</p>
+                                <p class="thumbnail-classic-text">Discussion, Meeting</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 2">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/gallery-original-4.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-4-370x256.jpg" alt="" width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Voter Registration</p>
+                                <p class="thumbnail-classic-text">Elections, Meeting</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 3">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/gallery-original-5.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-5-370x256.jpg" alt="" width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Meeting in Los Angeles</p>
+                                <p class="thumbnail-classic-text">Los Angeles, Events</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/gallery-original-6.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-6-370x256.jpg" alt="" width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Political Conference 2018</p>
+                                <p class="thumbnail-classic-text">Conference, Annual</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 3">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/gallery-original-7.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-7-370x256.jpg" alt="" width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Democracy for Business</p>
+                                <p class="thumbnail-classic-text">Business, Meeting</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/gallery-original-8.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-8-370x256.jpg" alt="" width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Meeting with IT CEOs</p>
+                                <p class="thumbnail-classic-text">Information, Event</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 2">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/gallery-original-9.jpg" data-lightgallery="item"><img class="thumbnail-classic-image" src="images/grid-layout-9-370x256.jpg" alt="" width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Reorganization Meeting</p>
+                                <p class="thumbnail-classic-text">Meeting, Internal</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="info-container mt-5">
-            <div class="col-md-10">
-                <div class="embed-responsive embed-responsive-4by3">
-                    <iframe src="images/pdf/TPC code of conduct 2021.pdf" height="100%"
-                        width="100%"></iframe>
-                </div>
-            </div>
-        </div>
-        <div class="info-container mt-2">
-            <div class="col-md-10">
-                <div class="embed-responsive embed-responsive-4by3">
-                    <iframe src="images/pdf/Declaration.pdf" height="100%"
-                        width="100%"></iframe>
-                </div>
-            </div>
-        </div>
-        <div class="info-container mt-2 mb-2">
-            <div class="col-md-10">
-                <div class="embed-responsive embed-responsive-4by3">
-                    <iframe src="images/pdf/cvFormat.pdf" height="100%"
-                        width="100%"></iframe>
-                </div>
-            </div>
-        </div>
+        </section>
+
         <footer class="section footer-linked bg-secondary-dark">
             <div class="footer-linked-main">
                 <div class="container">
