--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
                                                             href="testimonials.html">Testimonials</a></li>
                                                 </ul>
                                             </li> -->
+                                            <li class="rd-nav-item"><a class="rd-nav-link" href="events.html">Events</a>
+                                            </li>
                                             <li class="rd-nav-item"><a class="rd-nav-link"
                                                     href="code-of-conduct.html">Code of
                                                     Conduct</a>
@@ -588,6 +590,7 @@
                                 <div class="col-12">
                                     <ul class="list list-xs">
                                         <li><a href="index.html">Home</a></li>
+                                        <li><a href="events.html">Events</a></li>
                                         <li><a href="code-of-conduct.html">Code of Conduct</a></li>
                                         <li><a href="past-placements.html">Past Placements</a></li>
                                         <li><a href="our-alumni.html">Our Alumni</a></li>
